--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .mainContainer {
+  min-height: 100vh;
   background-image: url('./images/bg2.JPG'); /* Path to your image */
   background-size:2300px 1400px;                        /* Cover the entire element */
  
