--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@ body {
 .mainContainer {
   min-height: 100vh;
   background-image: url('./images/bg2.JPG'); /* Path to your image */
-  background-size:2300px 1400px;                        /* Cover the entire element */
+  background-size:1920px 1080px;                        /* Cover the entire element */
  
   background-repeat:repeat;                    /* Prevent image repetition */
   width: 100%;                                     /* Set width */
@@ -110,6 +110,7 @@ p,h1,h3, h4{
   color: rgb(169, 255, 231);
   font-family: "AzeretMono", monospace;
   text-align: center;
+  font-size: 24px;
 
 
   
