--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@ body {
 .mainContainer {
   min-height: 100vh;
   background-image: url('./images/bg2.JPG'); /* Path to your image */
-  background-size:1920px 1200px;                        /* Cover the entire element */
+  background-size:1600px 1200px;                        /* Cover the entire element */
  
   background-repeat:repeat;                    /* Prevent image repetition */
   width: 100%;                                     /* Set width */
@@ -32,6 +32,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 100px;
+  margin-top: 50px;
 
 }
 
