--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,7 +12,7 @@ body {
   min-height: 100vh;
   background-image: url('./images/bg2.JPG'); /* Path to your image */
   background-size:1900px 800px;                        /* Cover the entire element */
- 
+  background-position: center;
   background-repeat:repeat;                    /* Prevent image repetition */
   width: 100%;                                     /* Set width */
   height: 100vh;                                   /* Set height (or desired size) */
