--- a/src/App.module.css
+++ b/src/App.module.css
@@ -125,6 +125,8 @@ header{
 
 }
 
+
+
 @media (max-width: 768px) {
   .mainContainer {
     background-size: cover;
@@ -161,6 +163,8 @@ header{
   .candleImage {
     width: 200px;
   }
+
+
 }
 
 /* Small screen adjustments */
@@ -180,5 +184,69 @@ header{
 
   .candleImage {
     width: 150px;
+  }
+}
+
+.playButton {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  background-color: #7c8481;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.playButton:hover {
+  background-color: #201f1e;
+}
+
+.videoPlayerContainer {
+  position: fixed;
+  top: 60px;
+  left: 20px;
+  z-index: 999;
+  width: 300px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  padding: 10px;
+}
+@media (max-width: 768px) {
+  .playButton {
+    top: 10px;
+    left: 10px;
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+
+  .videoPlayerContainer {
+    top: 50px;
+    left: 10px;
+    width: 90%; /* Use most of the screen width */
+    max-width: 300px;
+    padding: 8px;
+  }
+}
+
+/* Styling for devices with width less than 480px */
+@media (max-width: 480px) {
+  .playButton {
+    top: 5px;
+    left: 5px;
+    padding: 6px 12px;
+    font-size: 12px;
+  }
+
+  .videoPlayerContainer {
+    top: 40px;
+    left: 5px;
+    width: 55%;
+    max-width: 100px;
+    height: auto;
+    padding: 5px;
   }
 }
